force-app/main/default/objects/amazonconnect__AWS_CtiAdapter__c/amazonconnect__AWS_CtiAdapter__c.object-meta.xml
<CustomObject>
    <label>AWS CTI Adapter</label>
    <nameField>
        <label>AWS CTI Adapter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS CTI Adapters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>