force-app/main/default/objects/amazonconnect__AWS_CtiAdapter__c/fields/amazonconnect__CallLogAction__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CallLogAction__c</fullName>
    <label>Call Log Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
                <default>true</default>
                <label>Start</label>
            </value>
            <value>
                <fullName>End</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>