force-app/main/default/objects/amazonconnect__AWS_CtiAdapter__c/fields/amazonconnect__CallLogAutoCreate__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CallLogAutoCreate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Call Log Auto Create</label>
    <type>Checkbox</type>
</CustomField>