force-app/main/default/objects/amazonconnect__AWS_CtiAdapter__c/fields/amazonconnect__CallLogCallTypes__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CallLogCallTypes__c</fullName>
    <label>Call Log Call Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
                <default>true</default>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>