force-app/main/default/objects/amazonconnect__AWS_CtiAdapter__c/fields/amazonconnect__ConnectInstance__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ConnectInstance__c</fullName>
    <externalId>true</externalId>
    <label>Connect Instance</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>