force-app/main/default/objects/amazonconnect__AWS_CtiAdapter__c/fields/amazonconnect__ScreenpopAction__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ScreenpopAction__c</fullName>
    <label>Screenpop Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connecting</fullName>
                <default>true</default>
                <label>Connecting</label>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>